$Id: History,v 1.31 2002-10-16 16:52:10 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
16 oct 02: V.Ivant (muons-V04-01-00)
-redesign for a Model approach: files processNameSTD and processNameModel
     
29 may 02: mma (muons-V04-00-02)
- V.Ivanchenko G4VMuEnergyLoss - bug fixed in N of subcutoff delta
 
27 feb 02: mma (muons-V04-00-01)
- V.Ivanchenko G4VMuEnergyLoss - PostStep->PreStep for touchebleHandler 
     
10 fev 02: mma (muons-V04-00-00)
- G4VMuEnergyLoss : error in SetMindeltaCutInRange, was set in energy !
         
12 nov 01: mma (muons-V03-02-10)
- ParticleMass and Charge: local variables
- merge 09 + 06a
     
07 nov 01: mma (muons-V03-02-09)
- correction(Tmax+xsection computation) L.Urban
    
28 oct 01: mma (muons-V03-02-08)
- all static functions no more inlined
     
24 oct 01: mma (muons-V03-02-07)
- cut per material : all classes

08 nov 01: G.Cosmo (muons-V03-02-06a)
- Introduced changes to G4VMuEnergyLoss.cc for reference-counted touchables
  (R.Chytracek). Not included in further tags till "muons-V03-02-09".

28 sep 01: mma (muons-V03-02-06)
- suppression of theMuonPlus ..etc..data members : all classes
- completion of store/retrieve PhysicsTables
     