@@ -1,4 +1,4 @@
-$Id: History,v 1.66 2002-10-17 12:16:59 maire Exp $
+$Id: History,v 1.67 2002-10-28 18:52:54 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+28 oct 02: V.Ivant (stand-V04-01-04)
+-fix compilation warnings for STD classes
+
 17 oct 02: V.Ivant (stand-V04-01-03)
 -few changes in all xSTD processes in connection with LossTableBuilder
     
