@@ -1,4 +1,4 @@
-$Id: History,v 1.60 2002-10-28 09:06:07 vnivanch Exp $
+$Id: History,v 1.61 2002-10-28 18:54:25 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,7 +19,7 @@ committal in the CVS repository !
 
 
 28 oct 02: V.Ivanchenko (utils-V04-01-06)
-- fix in G4MultipleScattringSTD
+- fix in G4MultipleScattringSTD + cleanup warnings in STD classes
 
 17 oct 02: V.Ivant (utils-V04-01-05)
 - temporary fix for proton scattering propagated in MultipleScatteringSTD
