@@ -1,4 +1,4 @@
-$Id: History,v 1.31 2002-10-16 16:52:10 maire Exp $
+$Id: History,v 1.32 2002-10-28 18:49:11 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+28 oct 02: V.Ivant (muons-V04-01-01)
+-fix compilation warnings for STD classes
      
 16 oct 02: V.Ivant (muons-V04-01-00)
 -redesign for a Model approach: files processNameSTD and processNameModel
